--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Free Isha Yoga Programs Benefit 74,000 Prisoners | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>The Significance of Navratri | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Exploring the Layers of Spiritual Growth</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Getting Stressed During Trades</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Real NAV Erosion: Selling SPY Shares for Income</h3>
                         <div class="channel">Scott Welsh Strategies</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1812,7 +1812,7 @@
                     <div class="video-info">
                         <h3>Double Agnolotti Pasta Magic 🍝🔥🪄🧚‍♂️ #pasta #ravioli #food #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2230,7 +2230,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN RANK THE WORLD'S BEST BURGER</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Aug 23, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5129,7 +5129,7 @@
                         <div class="video-info">
                             <h3>Getting Stressed During Trades</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5140,7 +5140,7 @@
                         <div class="video-info">
                             <h3>Real NAV Erosion: Selling SPY Shares for Income</h3>
                             <div class="channel">Scott Welsh Strategies</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>Free Isha Yoga Programs Benefit 74,000 Prisoners | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>The Significance of Navratri | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Exploring the Layers of Spiritual Growth</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8992,7 +8992,7 @@
                         <div class="video-info">
                             <h3>Double Agnolotti Pasta Magic 🍝🔥🪄🧚‍♂️ #pasta #ravioli #food #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9719,7 +9719,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN RANK THE WORLD'S BEST BURGER</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Aug 23, 2025</div>
                         </div>
                     </a>
                 </div>
