--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>Mahalaya Amavasya: Rituals For 12 Generations of Ancestors | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7319,7 +7319,7 @@
                         <div class="video-info">
                             <h3>Mahalaya Amavasya: Rituals For 12 Generations of Ancestors | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
