--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Enlightenment – A Vision Beyond Light & Darkness | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Housing is getting more expensive because the rich are buying it all</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">14 hours ago</div>
+                        <div class="date">15 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Free Isha Yoga Programs Benefit 74,000 Prisoners | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>$1.2M investor capital in less than 2 months: The Rise of SQZ</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Algo Trading Explained: Simple Guide for Beginners #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>The Significance of Navratri | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Exploring the Layers of Spiritual Growth</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Getting Stressed During Trades</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Housing is getting more expensive because the rich are buying it all</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">14 hours ago</div>
+                            <div class="date">15 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>$1.2M investor capital in less than 2 months: The Rise of SQZ</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>Algo Trading Explained: Simple Guide for Beginners #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5129,7 +5129,7 @@
                         <div class="video-info">
                             <h3>Getting Stressed During Trades</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>Enlightenment – A Vision Beyond Light & Darkness | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Free Isha Yoga Programs Benefit 74,000 Prisoners | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>The Significance of Navratri | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7275,7 +7275,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Exploring the Layers of Spiritual Growth</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
