--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Algo Trading Explained: Simple Guide for Beginners #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -541,7 +541,7 @@
                     <div class="video-info">
                         <h3>Isha Gramotsavam Karnataka Finals - Glimpses | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1344,7 +1344,7 @@
                     <div class="video-info">
                         <h3>Backtesting: Essential for Trading Strategy Success #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -1355,7 +1355,7 @@
                     <div class="video-info">
                         <h3>Strategy Build! 🏆 Kevin Davey Strategy Club October 2025📈</h3>
                         <div class="channel">Peak Trading Research</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>Algo Trading Explained: Simple Guide for Beginners #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5525,7 +5525,7 @@
                         <div class="video-info">
                             <h3>Backtesting: Essential for Trading Strategy Success #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -5536,7 +5536,7 @@
                         <div class="video-info">
                             <h3>Strategy Build! 🏆 Kevin Davey Strategy Club October 2025📈</h3>
                             <div class="channel">Peak Trading Research</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7462,7 +7462,7 @@
                         <div class="video-info">
                             <h3>Isha Gramotsavam Karnataka Finals - Glimpses | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
